Fix dark mode on responsive

--- a/assets/styles/page/_dark-mode.scss
+++ b/assets/styles/page/_dark-mode.scss
@@ -1,132 +1,9 @@
 @media (prefers-color-scheme: dark) {
     html {
-        .default-portfolio {
-            background-image: url('assets/images/darkmode.png');
-            background-position: center center;
-            background-size: cover;
-
-            .main-page {
-                background-color: transparent;
-
-                .header-img {
-                    display: none;
-                }
-
-                .content {
-                    top: 19%;
-                    filter: invert(1) hue-rotate(180deg);
-
-                    .texts {
-                        strong {
-                            color: #ad00ad;
-                        }
-
-                        p  {
-                            font-weight: initial;
-                        }
-                    }
-
-                    .buttons a {
-                        margin: 30px 65px;
-
-                        &:after,
-                        &:before {
-                            opacity: 0.4;
-                            background-color: #28a4ff;
-                        }
-
-                        span {
-                            color: #001c30;
-                        }
-
-                        &:hover {
-                            &:after,
-                            &:before {
-                                opacity: 0.1;
-                            }
-                            span {
-                                color: #000;
-                            }
-                        }
-
-                        &.work {
-                            border-left: 2px solid #28a4ff;
-                            border-bottom: 2px solid #28a4ff;
-                        }
-
-                        &.email {
-                            border-top: 2px solid #28a4ff;
-                            border-bottom: 2px solid #28a4ff;
-                        }
-
-                        &.blog {
-                            border-right: 2px solid #28a4ff;
-                        }
-                    }
-                }
-
-                .helper a {
-                    color: #e87c7c;
-                    opacity: 1;
-                    font-family: monospace;
-                    font-size: .6214em;
-                }
-            }
-        }
-
-        aside .the-shell #shell-overlay {
-            background-color: rgba(0,0,0,0.85);
-        }
+        @import "dark-styles";
     }
 }
 
 html.dark-mode {
-    .default-portfolio {
-        background-image: url('assets/images/darkmode.png');
-        background-position: center center;
-        background-size: cover;
-
-        .main-page {
-            background-color: transparent;
-
-            .header-img {
-                display: none;
-            }
-
-            .content {
-                top: 19%;
-                filter: invert(1) hue-rotate(180deg);
-
-                .texts {
-                    strong {
-                        color: #ad00ad;
-                    }
-
-                    p  {
-                        font-weight: initial;
-                    }
-                }
-
-                .buttons a {
-                    margin: 30px 65px;
-
-                    &.work {
-                        border-left: 2px solid #0000b1;
-                        border-bottom: 2px solid #0000b1;
-                    }
-                }
-            }
-
-            .helper a {
-                color: #e87c7c;
-                opacity: 1;
-                font-family: monospace;
-                font-size: .6214em;
-            }
-        }
-    }
-
-    aside .the-shell #shell-overlay {
-        background-color: rgba(0,0,0,0.85);
-    }
+    @import "dark-styles";
 }
